deployment/envoy/envoy.dev.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_https
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 443

      listener_filters:
        - name: envoy.filters.listener.tls_inspector
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector

      filter_chains:
        - filter_chain_match:
            server_names:
              - "localhost"
              - "192.168.155.40"
              - "*.leduynhan1201.dev"

          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: /etc/envoy/certificates/envoy.cert.pem
                    private_key:
                      filename: /etc/envoy/certificates/envoy.key.pem

          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http

                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: services
                      domains:
                        - "localhost:8889"
                        - "192.168.155.40:8889"
                        - "*.leduynhan1201.dev"

                      routes:
                        - match:
                            prefix: "/kc"
                          route:
                            cluster: keycloak_cluster
                            prefix_rewrite: "/"
                            hash_policy:
#                              - connection_properties:
#                                  source_ip: true
                              - cookie:
                                  name: AUTH_SESSION_ID
                                  ttl: 0s

#                          request_headers_to_add:
#                            - header:
#                                key: x-forwarded-proto
#                                value: https
#                            - header:
#                                key: x-forwarded-port
#                                value: "443"

                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: keycloak_cluster
      connect_timeout: 5s
      type: strict_dns # logical_dns
      lb_policy: ring_hash # round_robin
      http2_protocol_options: {}
      dns_lookup_family: V4_ONLY

      load_assignment:
        cluster_name: keycloak_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: keycloak0
                    port_value: 8080
            - endpoint:
                address:
                  socket_address:
                    address: keycloak1
                    port_value: 8080
            - endpoint:
                address:
                  socket_address:
                    address: keycloak2
                    port_value: 8080

      health_checks:
        - timeout: 3s
          interval: 10s
          unhealthy_threshold: 3
          healthy_threshold: 2
          http_health_check:
            path: "/health/ready"
